[project]
name = "weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "langchain-ollama>=0.3.2",
    "mcp[cli]>=1.8.0",
    "websockets>=15.0.1",
]
